--- a/hw2/requirements.txt
+++ b/hw2/requirements.txt
@@ -1,5 +1,5 @@
 mujoco==2.2.0
-gym==0.25.2
+gym[box2d]==0.25.2
 tensorboard==2.10.0
 tensorboardX==2.5.1
 matplotlib==3.5.3
@@ -10,4 +10,3 @@ torch==1.12.1
 opencv-python==4.6.0.66
 ipdb==0.13.9
 swig==4.0.2
-box2d-py==2.3.8
